/*
 * $Id: ChangeLog,v 1.2616 2004/03/21 02:44:12 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-21 02:41 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/macro/macro.slx
    ! Fixed initialization of iLastToken in hb_compFlexNew()

2004-03-20 18:53 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
    - Removed compiler specific hacks.
  * include/hbsetup.h
    + Added OS_PATH_DELIMITER_STRING
  * source/rtl/direct.c
    * Corrected hard coded "\\" to OS_PATH_DELIMITER_STRING
  * xdiff.txt
    - Removed Escaped Strings which were already listed as Extended Strings. :-)

2004-03-21 00:30 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    ! fixed smal typo but with very bad side effect - when only bottom
      scope was set it cause GPF when skipping
    * reorganized TagBOF/TagEOF flags for better performance and fixing
      some possible bad BOF/EOF setting
    * cdxSkipRaw() is now real SKIPRAW() without any filtering other
      then the one set on CDX level.

  * xharbour/source/rdd/workarea.c
    * fixed my last modification, now skipFilter() do only minimum
      necessary operations

  * xharbour/source/rdd/dbfntx/dbfntx1.c
    + flushing buffers added (patch from "Oscar Hernandez Suarez"
      <oscar@oscarweb.com>, thanks)

  - xharbour/tests/bldtest/endian.c
  + xharbour/tests/bldtest/bldtest.c
    * endian.c renamed to bldtest.c and a little bit extend

  * xharbour/include/hbexprb.c
  * xharbour/source/common/hbver.c
  * xharbour/source/pp/ppcore.c
  * xharbour/source/rtl/at.c
  * xharbour/source/rtl/filesys.c
    * warning fixes

2004-03-20 17:25 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rdd/dbcmd.c
    * cast in call to dbf2text

2004-03-20 19:16 UTC+0100 Giancarlo Niccolai <gc [at] niccolai [dot] ws>