@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2616 2004/03/21 02:44:12 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.2617 2004/03/21 10:33:00 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,16 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-03-21 15:10 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
+  * source/debug/debugger.prg
+    ! Fixed some problems with source files located across multiple
+      directories.
+    * A little speed optimization (use extended syntax for AIns/ADel).
+  * source/rtl/fnsplit.c
+    ! Added a missing hb_ret().
+  * source/rtl/hbffind.c
+    * Fixed a warning.
 
 2004-03-21 02:41 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/macro/macro.slx
